 * Added a "wget" method to EPrints::Utils to retrieve items from the Web
 * Only create one revision when creating new eprint objects

2008-03-14 cjg
 * Fixed a couple of http_url items in the template which needed to be 
    perl_url
 * (Re-fixed above to http_cgiurl)

2008-03-14 cjg
 * Added show_zero_results option to search config. which if true still
    shows the search results even if there is zero results. Closing #3278
    although it might want a nicer message later.

2008-03-17 tdb
 * Use syswrite to avoid buffered IO problems with file writing

2008-03-18 tdb
 * Don't return utf8 objects from tree_to_utf8 (much faster)
 * Performance tweaks: pass arrays rather than building hashes if not needed,
    $field_conf is always an object in MetaField::Compound
 * Fixed get_ids_by_field_values for cross-database, removed mk_time & mk_date
    and added "get_id_from_value" method to MetaFields
 * Alpha batch-editing plug-in
 * Allow UNSPECIFIED to be overridden in Compound fields

2008-03-19 tdb
 * Added XML Schema export for the EPrints database schema

2008-03-19 cjg
 * Added strlen method to EPrints Script
 * Added <epc:foreach> tool to EPC

2008-03-19 cjg
 * Added tool plugin feature (like feeds)
 * Made batch-edit a tool.

2008-03-19 cjg
 * Fixed bug in Database.pm caused by re-use of variable name in a loop.

2008-03-19 cjg
 * Cleanup of new view code, now titles in views look OK and everything is
    phrased and css'ed etc. Fixing #3266, #3267, #3268
 * Views regenerate if they are older than a set age. Fixing #3265
 * Fixed typo in generate_views.
 * Removed debug code.

2008-03-26 cjg
 * Moved auto-regeneration of abstract pages to its own new module.
 * Abstract pages now regenerate if they don't exist OR are older than
    the regen file.
 * Creating and importing eprints now does not generate abstracts at that 
    time.
 * Commiting an eprint just removes the current abstract page (if any) but 
    does not bother to generate a new one.
