@@ -7105,3 +7105,5 @@ PACKAGE: 2.2.99.2
  * Commiting an eprint just removes the current abstract page (if any) but 
     does not bother to generate a new one.
 
+2008-03-26 cjg
+ * Added edit-config to admin role.
